src/objects/Quote_Rate_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>Product_Rate_Plan__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Product__c</fullName>
        <label>Quote Product</label>
        <referenceTo>Quote_Product__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job_Rate_Plan__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Annual_Net_Total__c</fullName>
        <label>Roll Up Annual Net Total</label>
        <summarizedField>Quote_Rate_Plan_Charge__c.Annual_Net_Total__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Annual_Row_Total__c</fullName>
        <label>Roll Up Annual Row Total</label>
        <summarizedField>Quote_Rate_Plan_Charge__c.Annual_Row_Total__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Annual_VAT__c</fullName>
        <label>Roll Up Annual VAT</label>
        <summarizedField>Quote_Rate_Plan_Charge__c.Annual_VAT__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Year_2_Net_total__c</fullName>
        <label>Roll up Year 2 Net total</label>
        <summarizedField>Quote_Rate_Plan_Charge__c.Year_2_Net_Total__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Year_3_Net_total__c</fullName>
        <label>Roll up Year 3 Net total</label>
        <summarizedField>Quote_Rate_Plan_Charge__c.Year_3_Net_Total__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Year_4_Net_total__c</fullName>
        <label>Roll up Year 4 Net total</label>
        <summarizedField>Quote_Rate_Plan_Charge__c.Year_4_Net_Total__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Quote RatePlan Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <summarizedField>Quote_Rate_Plan_Charge__c.Price__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Rate_Plans_Charges__c</fullName>
        <label>Total Quote Rate Plans Charges</label>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vat_Roll_Up__c</fullName>
        <label>Vat Roll Up</label>
        <summarizedField>Quote_Rate_Plan_Charge__c.VAT__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Quote Rate Plan</label>
    <nameField>
        <label>Quote Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>